force-app/main/default/objects/Batch_Chain_Configuration__mdt/Batch_Chain_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Batch Chain Configuration</label>
    <pluralLabel>Batch Chain Configurations</pluralLabel>
</CustomObject>