force-app/main/default/objects/Batch_Chain_Configuration__mdt/fields/Current_Batch__c.field-meta.xml
<CustomField>
    <fullName>Current_Batch__c</fullName>
    <description>The current batch class name (Primary Key)</description>
    <inlineHelpText>The current batch class name (Primary Key)</inlineHelpText>
    <label>Current Batch</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>