force-app/main/default/objects/Batch_Chain_Configuration__mdt/fields/Execution_Delay__c.field-meta.xml
<CustomField>
    <fullName>Execution_Delay__c</fullName>
    <description>Delay in seconds before executing next batch</description>
    <inlineHelpText>Delay in seconds before executing next batch</inlineHelpText>
    <label>Execution Delay</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>