force-app/main/default/objects/Batch_Chain_Configuration__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Whether this configuration is active</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>