force-app/main/default/objects/Batch_Chain_Configuration__mdt/fields/Max_Retries__c.field-meta.xml
<CustomField>
    <fullName>Max_Retries__c</fullName>
    <inlineHelpText>Maximum retry attempts on failure</inlineHelpText>
    <label>Max Retries</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>