force-app/main/default/objects/Batch_Chain_Configuration__mdt/fields/Next_Batch__c.field-meta.xml
<CustomField>
    <fullName>Next_Batch__c</fullName>
    <description>The next batch class name in the chain</description>
    <inlineHelpText>The next batch class name in the chain</inlineHelpText>
    <label>Next Batch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>